--- a/css/estilos.css
+++ b/css/estilos.css
@@ -65,186 +65,162 @@
 }
 
 
-/** >>index.html<< **/
+/** >>inicio.html<< **/
 
 
-.body-index.html {
 
-    background-color:whitesmoke;
-    font-family: 'Frank Ruhl Libre', serif;
-    color: whitesmoke;
+
+
+.listas-inicio{
     
-    background-color: #000000;
-   
-    background-image: url("C:/Coderhouse/multimedia/crop (2).jpg") 
-}
-
-
-
-
-#Nombre-pagina{
-    color: chocolate;
-    padding: 10px 14px;
-    font-size: 35px;
-    margin-left: 40px;
-    margin: inherit;
-    margin-left: 20px;
-}
-
-/** .nav-main{
-    
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 100%;
+    list-style: none;
     position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    text-align: center;
-    justify-content: center;
+   
+    
+    
     
 }
-**/
 
-.header a{
-
-    display: flex;
+.header-inicio a{
+   
+    justify-content: space-between;
     align-items: center;
     padding: 0 50px;
-    justify-content: space-between;
-    font-size: 28px;
-
-
+    font-size: 30px;
+    border-radius: 4px;
+    font-family: 'Amiri', serif;
+    background-color: #010204;
 }
 
-
-
-.listas{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    padding: 10px 14px;
-    margin: 0px;
-
-}
-
-
-
-
-.link1{
-    display: flex;
-    text-decoration: none;
-    color: #026fb8;
-    
-}
-
-.link2{
-    
-    text-decoration: none;
-    color:#026fb8;
-}
-
-.link3{
-    
-    text-decoration: none;
-    color:#026fb8;
-}
-
-.link4{
-    
-    text-decoration: none;
-    color:#026fb8;
-}
-
-.link5{
-    
-    text-decoration: none;
-    color:#026fb8;
-}
-
-.inicio-texto1{
-    text-align: center;
-}
-
-.inicio-texto2{
+.frase-inicio h1 {
 
     text-align: center;
+    position: absolute;
+    top: 230px;
+    bottom: 0;
+    color: white;
+    font-family: 'Amiri', serif;
+    font-style: italic;
+
+}
+
+.frase-inicio h2 {
+
+   
+    position: absolute;
+    position: absolute;
+    bottom: 0px;
+    color: white;
+    margin-top: 10px;
+    top: 359px;
+    padding-top: 10px;
+    right: 20px;
+    font-family: 'Amiri', serif;
+    font-style: italic;
 }
 
 
-.imagen1{
-    float: right;
-    margin-right: 40px;
-}
-
-.imagen2{
-    margin-left: 40px;
-}
 
 
-
-
-.titulo-tabla{
-    color: rgb(1, 226, 31);
-    display: flex;
-    justify-content: center;
+.headerimg-inicio {
+    width: 100%;
+    
 }
 
 
+
+.link1 {
+    text-decoration: none;
+    color: white;
+}
+
+.link2 {
+    text-decoration: none;
+    color: white;
+}
+
+.link3 {
+    text-decoration: none;
+    color: white;
+}
+
+.link4 {
+    text-decoration: none;
+    color: white;
+}
+
+.link5 {
+    text-decoration: none;
+    color: white;
+}
+
+.texto1-inicio h3 {
+
+    margin-top: -6px;
+    color: white;
+    text-align: left;
+    border-bottom: 2px solid;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: black;
+    padding-left: 40px;
+}
+
+.texto1-inicio p {
+
+    padding: 10px;
+
+
+}
+
+.texto2-inicio h3 {
+
+    margin-top: -6px;
+    color: white;
+    text-align: right;
+    border-bottom: 2px solid;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: black;
+    padding-right: 40px;
+
+}
+
+.texto2-inicio p{
+
+    padding: 10px;
+
+
+}
+
+.titulo-division-tabla h3{
+
+    text-align: center;
+    color: white;
+    border-bottom: 2px solid;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: black;
+    padding-right: 40px;
+}
+
+.titulo-tabla h3{
+    text-align: center;
+    color: white;
+    border-bottom: 2px solid;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: black;
+    padding-right: 40px;
+}
 
 .tabla {
-    right: 0;
-    left: 0;
-    width: 100%;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
 
 
-th{
-    background-color: #0791E6;
-}
-
-#celdas1{
-    background-color: #E6B362;
-}
-
-#celdas2{
-    background-color: #c7c7c781;
-}
-
-#celdas3{
-    background-color: #EBB724;
-}
-
-.redes-sociales p{
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
-    color: darkorange;
-}
 
 
-.listas2{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-}
-
-.instagram{
-    color: crimson;
-    font-size: 20px;
-}
-
-.facebook{
-    color: rgb(10, 122, 197);
-    font-size: 20px;
-}
-
-.youtube{
-    color: rgb(235, 6, 6);
-    font-size: 20px;
 }
