--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 * {
-    margin: 0px;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 
-/** >> welcome.html << **/
+/*----------------------------------------------- welcome.html--------------------------------------- **/
 
 
 .body-welcome {
@@ -65,10 +65,12 @@
 }
 
 
-/** >>inicio.html<< **/
+/*---------------------------------------------------inicio.html-----------------------------------------------*/
 
 
-
+.body-inicio {
+    background-color:white;
+}
 
 
 .listas-inicio{
@@ -92,8 +94,15 @@
     padding: 0 50px;
     font-size: 30px;
     border-radius: 4px;
-    font-family: 'Amiri', serif;
+    font-family: 'Lato', sans-serif;
     background-color: #010204;
+    border: 2px solid;
+    border-radius: 6px;
+    border-bottom-color: #9D1C1F;
+    border-left-color: #101113;
+    border-right-color: #101113;
+    font-weight: bold;
+    
 }
 
 .frase-inicio h1 {
@@ -158,43 +167,129 @@
     color: white;
 }
 
-.texto1-inicio h3 {
+
+
+.titulo-section1 {
 
     margin-top: -6px;
     color: white;
     text-align: left;
-    border-bottom: 2px solid;
+    border-bottom: 4px solid;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    background-color: black;
+    border-color: #9D1C1F;
+    border-top-color: #9D1C1F;
+    background-color: #101113;
     padding-left: 40px;
+    font-family: 'Lato', sans-serif;
 }
 
 .texto1-inicio p {
 
     padding: 10px;
+    background-color:#E7EAED;
+    margin: 4px;
+    border: 2px groove;
+    border-color: rgba(255, 255, 255, 0.671);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-image: url(C:/Coderhouse/multimedia/universeinfo.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 450px 400px;
+    background-position-x: 1145px;
+    font-size: 30px;
+    height: 400px;
+    background-position-x: 100%;
+    padding-left: 30px;
+    padding-top: 80px;
+    padding-bottom: 50px;
+    padding-right: 500px;
+    
+}
 
+
+.section2-inicio {
+    background-color: #E7EAED;
+    border:  2px groove;
+    border-radius: 20px;
+    margin: 4px;
 
 }
 
-.texto2-inicio h3 {
 
-    margin-top: -6px;
+.titulo-section2 {
+
+    margin-top: 0;
     color: white;
+    background-color: white;
     text-align: right;
     border-bottom: 2px solid;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    background-color: black;
+    border-bottom-color:#9D1C1F;
+    background-color: #101113;
     padding-right: 40px;
+    font-family: 'Lato', sans-serif;
+   
+    
+}
+
+.textoSection2-inicio {
+    position: absolute;
+    top: 1500px;
+    text-align: right;
+    margin-left: 400px;
+    padding: 20px;
+}
+
+.profesionales-inicio {
+    border: 2px solid;
+    margin: 10px;
+    width: 394px;
+    border-radius: 20px;
+    
+}
+
+.section2-url-inicio{
+
+    height: 150px;
+    text-align: center;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: #E7EAED;
+    
+}
+
+.section2-url-inicio a{
+
+    border-radius: 10px;
+    border: 3px outset;
+    border-color: rgba(255, 255, 255, 0.671);
+    color: #101113;
+    text-decoration: none;
+    font-family: 'Krona One', sans-serif;
+    font-weight: bolder;
+    background-color: whitesmoke;
+    font-size: 30px;
+    
+
 
 }
 
-.texto2-inicio p{
 
-    padding: 10px;
-
-
+.section2img-inicio {
+    border-top-left-radius: 17.5px;
+    border-top-right-radius: 17.5px;
+    object-fit: cover;
+    width: 390px;
+    height: 190px;
 }
 
 .titulo-division-tabla h3{
@@ -202,25 +297,697 @@
     text-align: center;
     color: white;
     border-bottom: 2px solid;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+   
     background-color: black;
     padding-right: 40px;
 }
 
-.titulo-tabla h3{
-    text-align: center;
+.titulo-tabla {
+    
     color: white;
+    text-align: center;
     border-bottom: 2px solid;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    background-color: black;
-    padding-right: 40px;
+    border-radius: 20px;
+    border-color: #9D1C1F;
+    border-top-color: #9D1C1F;
+    background-color: #101113;
+    padding-left: 40px;
+    font-family: 'Lato', sans-serif;
 }
 
 .tabla {
 
+    width: 100%;
+    background-color:#121416f1;
+    margin-top: 4px;
+    border-radius: 20px;
+    font-family: 'Lato', sans-serif;
+    border-color: darkred;
+    
+}
+
+.tabla th {
+    color: white;
+}
+
+.celdas1{
+    background-color: #E6B362;
+    border-radius: 20px;
+}
+
+.celdas2{
+    background-color:#C0C0C0;
+}
+
+.celdas3{
+    background-color: #EBB724;
+}
+
+.section-footer h4 {
+    text-align: center;
+    
+    
+}
+
+.titulo-footer a {
+    margin-top: 3px;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    border: 3px groove;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    
+    border-color:  #9D1C1F ;
+    color: white;
+    background-color: #121416f1;
+    font-family: 'Lato', sans-serif;
+}
+
+.redes-sociales {
+
+    display: flex;
+    justify-content: space-around;
+    margin: 4px;
+    background-color: white;
+    border: 4px groove;
+    border-radius: 10px;
+    padding-top: 10px;
+    
+    
+    
+}
+
+/*---------------------------------------------- Universo.html-------------------------------------------*/
+
+.body-universo {
+ 
+    
+}
+
+
+
+
+.menu-universo {
+
+    display: flex;
+    justify-content: flex-end;
+    border-bottom-right-radius: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    list-style: none;
+    background-color: #101113;
+    border-bottom-left-radius: 15px;
+    border: 5px solid;
+    border-bottom-color: darkred;
+    border-top-color:  #101113;
+}
+
+.link0-universo  {
+
+    border: none;
+    border-radius: none;
+    font-size: 30px !important;
+    margin-right: 450px !important;
+  
+
+
+}
+
+.menu-universo a{
+    
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+    color: white;
+    font-size: 20px;
+    
+    font-size: 28px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: none;
+    border-top-right-radius: none;
+    border: 2px ;
+    font-family: 'Lato', sans-serif;
+}
+
+.titulo-section1-universo {
+    color: white;
+    margin-top: 5px;
+    margin-bottom: 1px;
+    border: 5px solid;
+    border-color: black;
+    padding-left: 10px;
+    background-color: black;
+    text-align: center;
+}
+
+.section1-universo p {
+
+    padding: 40px;
+    margin: 10px;
+    border: 2px solid;
+    border-radius: 15px;
+    background-color: #E7EAED;
+
+}
+
+.section1Video-universo{
+
+    margin: 20px;
+
+}
+
+
+
+.article1-universo {
+
+    display: flex;
+
+}
+
+
+.titulo-section2-universo {
+    color: white;
+    margin-top: 20px;
+    border: 5px solid;
+    border-radius: 20px;
+    padding-left: 10px;
+    background-color: black;
+    border-bottom: 2px solid;
+    text-align: center;
+}
+
+.articleSection2-universo {
+
+   display: flex;
+
+
+}
+
+
+
+.section2-universo p {
+
+    padding: 20px;
+    margin: 10px;
+    border: 2px solid;
+    border-radius: 15px;
+    margin-top: 30px;
+    background-color: #E7EAED;
+
+}
+
+
+.imgSection2-universo {
+
+    width: 500px;
+    margin: 10px;
+
+
+}
+
+.section3-universo {
+
+    margin-left: 10px;
+
+
+}
+
+
+
+
+.titulo-section3-universo {
+    color: white;
+    margin-top: 20px;
+    border: 5px solid;
+    border-radius: 20px;
+    padding-left: 10px;
+    background-color: black;
+    border-bottom: 2px solid;
+    text-align: center;
+}
+
+
+.divTextoSection3-universo {
+    position: absolute;
+    margin-left: 600px;
+    padding: 50px;
+    border: 2px solid;
+    border-radius: 15px;
+    margin-top: 10px;
+    margin-right: 10px;
+    background-color: #E7EAED;
+}
+
+
+
+/**---------------------------------Profesionales.html---------------------------**/
+
+.body-profesionales{
+
+
+    background-color: #e7eaed57;
+}
+
+.menu-profesionales {
+
+    display: flex;
+    justify-content: flex-end;
+    border-bottom-right-radius: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    list-style: none;
+    background-color: #101113;
+    border-bottom-left-radius: 15px;
+    border: 5px solid;
+    border-bottom-color: darkred;
+    border-top-color:  #101113;
+}
+
+.link0-profesionales  {
+
+    border: none;
+    border-radius: none;
+    font-size: 30px !important;
+    margin-right: 450px !important;
+  
+
+
+}
+
+.menu-profesionales a{
+    
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+    color: white;
+    font-size: 20px;
+    
+    font-size: 28px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: none;
+    border-top-right-radius: none;
+    border: 2px ;
+    font-family: 'Lato', sans-serif;
+}
+
+.tituloSection1-profesionales {
+    color: white;
+    margin-top: 5px;
+    margin-bottom: 1px;
+    border: 5px solid;
+    border-color: black;
+    padding-left: 10px;
+    background-color: black;
+    text-align: center;
+}
+
+/**----------------Section1-Div 1------------------**/
+
+.section1-profesionales {
+
+    display: flex;
+    margin: 30px;
+}
+
+
+
+
+
+.articleSection1-profesionales{
+
+    margin-left: 10px;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 10px;
+    background-color:  #101113;
+}
+
+.imgDiv1Section1-profesionales {
+
+    
+    object-fit: cover;
 
 
 
 }
+
+.articleSection1-profesionales p {
+
+    padding: 10px;
+    color:  #9D1C1F;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    
+
+
+}
+
+.urlDiv1Section1-profesionales{
+
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    border: 1px groove;
+    border-radius: 10px;
+    width: 100px;
+    margin: 20px;
+    margin-left: 155px;
+    font-family: 'Lato', sans-serif;
+}
+
+
+
+/**------------Section1-Div 2-----------**/
+
+.div2Section1-profesionales {
+
+    margin-right: 30px;
+    margin-left: 390px;    
+    border: 2px solid;
+    border-radius: 10px;
+    background-color: #101113;
+
+
+
+}
+
+.imgDiv2Section1-profesionales {
+
+    
+    object-fit: cover;
+  
+
+
+
+}
+
+.div2Section1-profesionales p {
+
+    padding: 10px;
+    color:  #9D1C1F;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+
+
+
+}
+
+.urlDiv2Section1-profesionales{
+
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    border: 1px groove;
+    border-radius: 10px;
+    width: 100px;
+    margin: 20px;
+    margin-left: 165px;
+    font-family: 'Lato', sans-serif;
+
+}
+
+
+
+
+/**---------------------------------section2-profesionales---------------------**/
+
+
+.section2-profesionales {
+    
+    display: flex;
+    margin: 30px;
+
+}
+
+.div1Section2-profesionales {
+
+}
+
+
+
+.articleSection2-profesionales {
+
+    margin-left: 10px;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 10px;
+    background-color:  #101113;
+
+}
+
+.articleSection2-profesionales p {
+
+    padding: 10px;
+    color:  #9D1C1F;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+}
+
+.imgDiv1Section2-profesionales {
+
+    object-fit: cover;
+
+}
+
+.urlDiv1Section2-profesionales {
+
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    border: 1px groove;
+    border-radius: 10px;
+    width: 100px;
+    margin: 20px;
+    margin-left: 155px;
+    font-family: 'Lato', sans-serif;
+
+}
+
+/**-----------------------------------contacto.html-------------------------**/
+
+.body-contacto {
+
+    background-color: #101113 ;
+
+
+}
+
+
+
+
+
+
+.menu-contacto {
+
+    display: flex;
+    justify-content: flex-end;
+    border-bottom-right-radius: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    list-style: none;
+    background-color: #101113;
+    border-bottom-left-radius: 15px;
+    border: 5px solid;
+    border-bottom-color: darkred;
+    border-top-color:  #101113;
+}
+
+.link0-contacto  {
+
+    border: none;
+    border-radius: none;
+    font-size: 30px !important;
+    margin-right: 450px !important;
+  
+
+
+}
+
+
+.menu-contacto a{
+    
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+    color: white;
+    font-size: 20px;
+    font-size: 28px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: none;
+    border-top-right-radius: none;
+    border: 2px ;
+    font-family: 'Lato', sans-serif;
+}
+
+.tituloSection1-contacto {
+    color: white;
+    margin-top: 5px;
+    margin-bottom: 1px;
+    border: 5px solid;
+    border-radius: 10px;
+    border-color: black;
+    padding-left: 10px;
+    background-color: black;
+    text-align: center;
+}
+
+.Section1-contacto {
+
+    display: flex;
+    margin-left: 60px;
+
+
+}
+
+.img-contacto {
+
+    margin-top: 12px;
+    height: 500px;
+    margin-left: 20px;
+}
+
+.formulario-contacto {
+
+    background-color: #213253cc;
+    padding: 20px;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    border-radius: 10px;
+    border-color: darkred;
+}
+
+
+
+
+/**-------------------------------Productos-html-------------------------**/
+
+.body-productos {
+
+   background-color: #101113;
+
+
+
+}
+
+.menu-productos{
+
+    display: flex;
+    justify-content: flex-end;
+    border-bottom-right-radius: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    list-style: none;
+    background-color: #101113;
+    border-bottom-left-radius: 15px;
+    border: 5px solid;
+    border-bottom-color: darkred;
+    border-top-color:  #101113;
+}
+
+.link0-productos {
+
+    border: none;
+    border-radius: none;
+    font-size: 30px !important;
+    margin-right: 450px !important;
+  
+
+
+}
+
+
+.menu-productos a{
+    
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+    color: white;
+    font-size: 20px;
+    font-size: 28px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: none;
+    border-top-right-radius: none;
+    border: 2px ;
+    font-family: 'Lato', sans-serif;
+}
+
+.tituloSection1-productos {
+    color: white;
+    margin-top: 5px;
+    margin-bottom: 1px;
+    border: 5px solid;
+    border-radius: 10px;
+    border-color: black;
+    padding-left: 10px;
+    background-color: black;
+    text-align: center;
+}
+
+.articleSection1-productos {
+
+    display: flex;
+    background-color: whitesmoke;
+    border: 2px solid;
+    border-radius: 10px;
+    margin: 8px;
+
+}
+.section1Texto-productos {
+
+    margin: 20px;
+    border: 2px solid;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #213253cc;
+    padding: 10px;
+}
+
+.articleSection2-productos {
+
+    display: flex;
+    background-color: whitesmoke;
+    border: 2px solid;
+    border-radius: 10px;
+    margin: 8px;
+}
+
+.section2Texto-productos {
+
+    margin: 20px;
+    border: 2px solid;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #213253cc;
+    padding: 10px;
+}
+
+.articleSection3-productos {
+
+    display: flex;
+    background-color: whitesmoke;
+    border: 2px solid;
+    border-radius: 10px;
+    margin: 8px;
+
+}
+.section3Texto-productos {
+
+    margin: 20px;
+    border: 2px solid;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #213253cc;
+    padding: 10px;
+}
+
+
