--- a/css/estilos.css
+++ b/css/estilos.css
@@ -70,18 +70,143 @@
 
 .body-inicio {
     background-color:white;
+    
 }
+
+
+.container-inicio
+{
+    max-width: 1600px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+    grid-template-areas:
+        "header header header"
+        "main main lateral"
+        "widget-1 widget-2 lateral"
+        "footer footer footer";
+    margin: 0px auto;
+    gap: 5px;
+
+    
+
+}
+
+.header-inicio
+{
+   
+    grid-area: header / header / header / header;
+    flex-wrap: wrap;
+   
+}
+
+.menu-inicio ul {
+    display: flex;
+    margin: 0px;
+    list-style: none;
+    padding: 0px;
+}
+
+
+
+
+.main-inicio
+{
+
+    min-height: 800px;
+    background-color: #101113;
+    grid-area: main / main / main / main;
+    min-height: 500px;
+
+}
+
+.main-inicio h1{
+
+    color: white;
+    position: absolute;
+    font-family: 'Lato', sans-serif;
+    padding: 10%;
+    margin-right: 35%;
+}
+
+.main-inicio h2 {
+
+    position: absolute;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    padding: 10%;
+    margin-right: 35%;
+    bottom: 0;
+}
+
+.aside-inicio {
+    background-color:  #101113;
+    min-height: 400px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-area: lateral / lateral / lateral / lateral;
+
+}
+
+.figures-inicio {
+
+    display: grid;
+
+
+}
+
+.widget1-inicio {
+    grid-area: widget-1 / widget-1 / widget-1 / widget-1;
+    min-height: 300px;
+    background-color: #101113;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.widget2-inicio {
+    grid-area: widget-2 / widget-2 / widget-2 / widget-2;
+    min-height: 300px;
+    background-color: #101113;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-inicio{
+
+    
+    background-color: cyan;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-area: footer / footer / footer / footer;
+    
+
+}
+
 
 
 .listas-inicio{
     
+    
+    flex-wrap: wrap;
     display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+    justify-content: space-evenly;
+    border-bottom-right-radius: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     list-style: none;
-    position: absolute;
-   
+    background-color: #101113;
+    border-bottom-left-radius: 15px;
+    border: 5px solid;
+    border-bottom-color: darkred;
+    border-top-color:  #101113;
     
     
     
@@ -89,23 +214,14 @@
 
 .header-inicio a{
    
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 50px;
     font-size: 30px;
-    border-radius: 4px;
+   
     font-family: 'Lato', sans-serif;
-    background-color: #010204;
-    border: 2px solid;
-    border-radius: 6px;
-    border-bottom-color: #9D1C1F;
-    border-left-color: #101113;
-    border-right-color: #101113;
     font-weight: bold;
     
 }
 
+/**
 .frase-inicio h1 {
 
     text-align: center;
@@ -133,7 +249,7 @@
     font-style: italic;
 }
 
-
+**/
 
 
 .headerimg-inicio {
@@ -185,6 +301,7 @@
     font-family: 'Lato', sans-serif;
 }
 
+/**
 .texto1-inicio p {
 
     padding: 10px;
@@ -196,7 +313,7 @@
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    background-image: url(C:/Coderhouse/multimedia/universeinfo.jpg);
+   
     background-repeat: no-repeat;
     background-position: right;
     background-size: 450px 400px;
@@ -210,7 +327,7 @@
     padding-right: 500px;
     
 }
-
+**/
 
 .section2-inicio {
     background-color: #E7EAED;
@@ -251,7 +368,7 @@
 .profesionales-inicio {
     border: 2px solid;
     margin: 10px;
-    width: 394px;
+    width: 100%;
     border-radius: 20px;
     
 }
@@ -350,7 +467,7 @@
     
 }
 
-.titulo-footer a {
+.footer-inicio h2 {
     margin-top: 3px;
     display: flex;
     justify-content: center;
@@ -367,7 +484,7 @@
     font-family: 'Lato', sans-serif;
 }
 
-.redes-sociales {
+.footer-inicio {
 
     display: flex;
     justify-content: space-around;
@@ -380,6 +497,20 @@
     
     
 }
+
+@media only screen and(min-width: 768px)
+
+{
+    
+    .body{
+    
+        background-color: blue;
+        color: rebeccapurple;
+        }
+}
+
+
+
 
 /*---------------------------------------------- Universo.html-------------------------------------------*/
 
