--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,179 @@
     box-sizing: border-box;
 }
 
+.menu{
+    
+    text-decoration: none;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-evenly;
+    border-bottom-right-radius: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    list-style: none;
+    background-color: #101113;
+    border-bottom-left-radius: 15px;
+    border: 5px solid;
+    border-bottom-color: darkred;
+    border-top-color:  #101113;
+    margin-bottom: nine;
+
+
+}
+
+.menu a{
+    
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+    color: white;
+    font-size: 20px;
+    font-size: 28px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: none;
+    border-top-right-radius: none;
+    border: 2px ;
+    font-family: 'Lato', sans-serif;
+    transition: color 1s cubic-bezier(0.98, 1.6, 1, 1), border-color 0.5s cubic-bezier(0.06, 0.81, 0, 0.24);
+
+}
+
+.footer {
+
+    display: flex;
+    justify-content: space-around;
+    margin: 4px;
+    background-color: white;
+    border: 4px groove;
+    border-radius: 10px;
+    padding-top: 10px;
+    
+    
+    
+}
+
+@media (min-width: 900px){
+
+/*-------------------------------------INICIO.HTML--------------------------------------*/
+    .container-inicio
+    {
+        background-color: #101113 ;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, auto);
+        grid-template-areas:
+        "header header"
+        "main main"
+        "widget-1 widget-2"
+        "footer footer";
+        margin: 0px auto;
+        
+    }
+
+    .imgMain-inicio{
+
+        width: 100%;
+        height: 700px;
+
+    }
+
+    .header-inicio
+    {
+   
+        grid-area: header / header / header / header;
+        flex-wrap: wrap;
+   
+    }
+    
+    .main-inicio
+    {
+
+        min-height: 800px;
+        background-color: #101113;
+        grid-area: main / main / main / main;
+        min-height: 500px;
+
+    }
+
+
+    .widget1-inicio {
+        grid-area: widget-1 / widget-1 / widget-1 / widget-1;
+        min-height: 300px;
+        background-color: #101113;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .widget2-inicio {
+        grid-area: widget-2 / widget-2 / widget-2 / widget-2;
+        min-height: 300px;
+        background-color: #101113;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .footer{
+
+        grid-area: footer;
+
+    }
+
+/*-------------------------------------CONTACTO--------------------------------------*/
+
+    .container-contacto
+    {
+        background-color: #101113 ;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, auto);
+        grid-template-areas:
+        "header header"
+        "titulo titulo"
+        "widget-1 widget-2"
+        "footer footer";
+        margin: 0px auto;
+        gap: 5px;
+    
+    }
+
+    .header-contacto
+    {
+
+        grid-area: header;
+
+
+    }
+
+    .tituloSection1-contacto
+    {
+        grid-area: titulo;
+    }
+
+    .formulario
+    {
+        grid-area: widget-1;
+       
+    }
+
+    .imgFormulario
+    {
+        grid-area: widget-2;
+        height: 100%;
+    }
+
+    .formulario-contacto
+    {
+        width: 100%;
+    }
+
+
+}
+
 
 /*----------------------------------------------- welcome.html--------------------------------------- **/
 
@@ -80,31 +253,9 @@
     }
 
 
-    .container-inicio
-    {
-       
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, auto);
-        grid-template-areas:
-        "header header header"
-        "main main lateral"
-        "widget-1 widget-2 lateral"
-        "footer footer footer";
-        margin: 0px auto;
-        gap: 5px;
-
     
 
-    }
-
-    .header-inicio
-    {
    
-        grid-area: header / header / header / header;
-        flex-wrap: wrap;
-   
-    }
 
     .menu-inicio ul {
         display: flex;
@@ -116,16 +267,7 @@
 
 
 
-    .main-inicio
-    {
-
-        min-height: 800px;
-        background-color: #101113;
-        grid-area: main / main / main / main;
-        min-height: 500px;
-
-    }
-
+   
     .main-inicio h1{
 
         color: white;
@@ -144,40 +286,7 @@
        
     }
 
-    .aside-inicio {
-        background-color:  #101113;
-        min-height: 400px;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        grid-area: lateral;
-
-    }
-
-    .figures-inicio {
-
-    }
-
-    .widget1-inicio {
-        grid-area: widget-1 / widget-1 / widget-1 / widget-1;
-        min-height: 300px;
-        background-color: #101113;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .widget2-inicio {
-        grid-area: widget-2 / widget-2 / widget-2 / widget-2;
-        min-height: 300px;
-        background-color: #101113;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+   
 
     .footer-inicio{
 
@@ -194,36 +303,8 @@
 
 
 
-    .listas-inicio{
-    
-    
-        flex-wrap: wrap;
-        display: flex;
-        justify-content: space-evenly;
-        border-bottom-right-radius: 15px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        list-style: none;
-        background-color: #101113;
-        border-bottom-left-radius: 15px;
-        border: 5px solid;
-        border-bottom-color: darkred;
-        border-top-color:  #101113;
-    
-    
-    
-    }
 
-    .header-inicio a{
-   
-        font-size: 30px;
-   
-        font-family: 'Lato', sans-serif;
-        font-weight: bold;
-    
-    }
 
-/**
 .frase-inicio h1 {
 
     text-align: center;
@@ -260,31 +341,6 @@
     }
 
 
-
-    .link1 {
-        text-decoration: none;
-        color: white;
-    }
-
-    .link2 {
-        text-decoration: none;
-        color: white;
-    }
-
-    .link3 {
-        text-decoration: none;
-        color: white;
-    }
-
-    .link4 {
-        text-decoration: none;
-        color: white;
-    }
-
-    .link5 {
-        text-decoration: none;
-        color: white;
-    }
 
 
 
@@ -501,14 +557,14 @@
     }
 
 }   
-
+/*
 @media (min-width: 768px) 
 
 {
         
     .container-inicio
     {
-        max-width: 1199px;
+       
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, auto);
@@ -726,7 +782,7 @@
 
     .container-inicio
     {
-        max-width: 768px;
+       
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, auto);
@@ -1374,22 +1430,7 @@
 }
 
 
-.menu-contacto a{
-    
-    
-    text-decoration: none;
-    list-style: none;
-    margin-right: 30px;
-    color: white;
-    font-size: 20px;
-    font-size: 28px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-left-radius: none;
-    border-top-right-radius: none;
-    border: 2px ;
-    font-family: 'Lato', sans-serif;
-}
+
 
 .tituloSection1-contacto {
     color: white;
@@ -1427,6 +1468,20 @@
     font-family: 'Lato', sans-serif;
     border-radius: 10px;
     border-color: darkred;
+    
+}
+.footer {
+
+    display: flex;
+    justify-content: space-around;
+    margin: 4px;
+    background-color: white;
+    border: 4px groove;
+    border-radius: 10px;
+    padding-top: 10px;
+    
+    
+    
 }
 
 
