--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@
     text-decoration: none;
     flex-wrap: wrap;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     border-bottom-right-radius: 15px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -19,7 +19,7 @@
     border: 5px solid;
     border-bottom-color: darkred;
     border-top-color:  #101113;
-    margin-bottom: nine;
+    
 
 
 }
@@ -39,6 +39,21 @@
     border: 2px ;
     font-family: 'Lato', sans-serif;
     transition: color 1s cubic-bezier(0.98, 1.6, 1, 1), border-color 0.5s cubic-bezier(0.06, 0.81, 0, 0.24);
+    
+}
+
+.tituloHeader
+{
+    
+    
+    margin-left: 40px;
+
+}
+
+.Itemsnav
+{
+    display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -56,6 +71,35 @@
     
 }
 
+.frase-inicio h1 {
+
+    text-align: center;
+    position: absolute;
+    top: 230px;
+    bottom: 0;
+    color: white;
+    font-family: 'Amiri', serif;
+    font-style: italic;
+
+}
+/*#3065cfcc*/
+
+
+.frase-inicio h2 {
+
+   
+    position: absolute;
+    position: absolute;
+    bottom: 0px;
+    color: white;
+    margin-top: 10px;
+    top: 359px;
+    padding-top: 10px;
+    right: 20px;
+    font-family: 'Amiri', serif;
+    font-style: italic;
+}
+
 @media (min-width: 900px){
 
 /*-------------------------------------INICIO.HTML--------------------------------------*/
@@ -68,13 +112,15 @@
         grid-template-areas:
         "header header"
         "main main"
+        "titulo titulo"
         "widget-1 widget-2"
         "footer footer";
         margin: 0px auto;
         
     }
 
-    .imgMain-inicio{
+    .imgMain-inicio
+    {
 
         width: 100%;
         height: 700px;
@@ -99,8 +145,19 @@
 
     }
 
+  
 
-    .widget1-inicio {
+    .tituloWidgets-inicio
+    {
+        grid-area: titulo;
+        display: flex;
+        justify-content: space-evenly;
+        background-color: black;
+    }
+
+
+    .widget1-inicio 
+    {
         grid-area: widget-1 / widget-1 / widget-1 / widget-1;
         min-height: 300px;
         background-color: #101113;
@@ -110,7 +167,8 @@
         justify-content: center;
     }
 
-    .widget2-inicio {
+    .widget2-inicio 
+    {
         grid-area: widget-2 / widget-2 / widget-2 / widget-2;
         min-height: 300px;
         background-color: #101113;
@@ -120,11 +178,16 @@
         justify-content: center;
     }
     
-    .footer{
+    .footer
+    {
 
         grid-area: footer;
 
     }
+
+
+
+
 
 /*-------------------------------------CONTACTO--------------------------------------*/
 
@@ -177,7 +240,78 @@
 
 }
 
+@media (max-width: 899px)
+{
 
+/*-------------------------------------INICIO.HTML--------------------------------------*/
+        .container-inicio
+        {
+            background-color: #101113 ;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(6, auto);
+            grid-template-areas:
+            "header header"
+            "main main"
+            "widget-1 widget-1"
+            "widget-2 widget-2"
+            "footer footer";
+            margin: 0px auto;
+            
+        }
+    
+        .imgMain-inicio{
+    
+            width: 100%;
+            height: 700px;
+    
+        }
+    
+        .header-inicio
+        {
+       
+            grid-area: header / header / header / header;
+            flex-wrap: wrap;
+       
+        }
+        
+        .main-inicio
+        {
+    
+            min-height: 800px;
+            background-color: #101113;
+            grid-area: main / main / main / main;
+            min-height: 500px;
+    
+        }
+    
+    
+        .widget1-inicio {
+            grid-area: widget-1 / widget-1 / widget-1 / widget-1;
+            min-height: 300px;
+            background-color: #101113;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    
+        .widget2-inicio {
+            grid-area: widget-2 / widget-2 / widget-2 / widget-2;
+            min-height: 300px;
+            background-color: #101113;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        .footer{
+    
+            grid-area: footer;
+    
+        }
+}
 /*----------------------------------------------- welcome.html--------------------------------------- **/
 
 
@@ -237,10 +371,10 @@
    width: 100%;
     
 }
+---inicio.html-----------------------------------------------*/
 
 
-/*---------------------------------------------------inicio.html-----------------------------------------------*/
-
+/*------------------------------------------------
 
 
 @media (min-width: 1200px) 
@@ -304,35 +438,12 @@
 
 
 
+*/
 
-.frase-inicio h1 {
 
-    text-align: center;
-    position: absolute;
-    top: 230px;
-    bottom: 0;
-    color: white;
-    font-family: 'Amiri', serif;
-    font-style: italic;
+/*
 
-}
 
-.frase-inicio h2 {
-
-   
-    position: absolute;
-    position: absolute;
-    bottom: 0px;
-    color: white;
-    margin-top: 10px;
-    top: 359px;
-    padding-top: 10px;
-    right: 20px;
-    font-family: 'Amiri', serif;
-    font-style: italic;
-}
-
-**/
 
 
     .headerimg-inicio {
@@ -666,10 +777,7 @@
     }
 
     
-    .link1 {
-        text-decoration: none;
-        color: white;
-    }
+   
 
     .link2 {
         text-decoration: none;
@@ -1401,33 +1509,7 @@
 
 
 
-.menu-contacto {
 
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    border-bottom-right-radius: 15px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    list-style: none;
-    background-color: #101113;
-    border-bottom-left-radius: 15px;
-    border: 5px solid;
-    border-bottom-color: darkred;
-    border-top-color:  #101113;
-}
-
-.link0-contacto  {
-
-    border: none;
-    border-radius: none;
-    font-size: 30px !important;
-    margin-right: 432px !important;
-  
-
-
-}
 
 
 
